css/styles.css
html {
  font-family: 'Roboto Condensed', sans-serif;
}

body {
  background-color:#3d3e3e;
  width: 90%;
  margin: auto;
  font-family: 'Roboto Condensed', sans-serif;
}

#index-body {
  background-image: url("img/index-cover.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.jumbotron {
  background-color:#373838;
  color: #dddddd;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: auto;
  max-height: 340px;
  overflow-y: auto; 
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  font-family: 'Roboto Mono', monospace;
  padding: 1rem;
  padding-right: auto;
  padding-left: auto;
  border-bottom: #27cec5 .1rem solid;
  border-top: #27cec5 .1rem solid;
}

.linkedLink {
  display: flex;
  align-items: center;
  justify-content: center;
}

.title {
  font-size: 1.2rem;
  margin-bottom: 0;
}

#contactLinks {
  display: flex;
  justify-content:space-around;
  width: 20%;
}

#contactLinks a {
  display: inline-block;
}

#aboutContainer {
  margin-top: 15%;
  
  font-size: 1.2rem;
  margin-bottom: 10%;
  color:#dddddd;
}

.aboutBody {
  margin-top: auto;
  margin-bottom: auto;
  border-bottom: #27cec5 .1rem solid;
}

.aboutPhoto {
  margin-top: auto;
  margin-bottom: auto;
}

.bioPic {
  filter: drop-shadow(5px 5px 5px #666666);
  border-radius: 30%;
}


i:hover {
  color:#27cec5;
  transition: 1s;
  cursor: pointer;
}

i {
  color: #AEC6CF;
  margin: auto;
  font-family: 'Roboto Condensed', sans-serif;
}

.bioPic {
  width: 100%;
}

#projects {
  margin-top: 10%;
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 1.2rem;
  margin-bottom: 20%;
  color:#dddddd;
  padding-bottom: 5%;
  border-bottom: #27cec5 .1rem solid;
}

#projects img {
  display: block;
  margin:auto;
}


.quotesGif {
  margin: auto;
  width: 80%;
  display: block;
  filter: drop-shadow(5px 5px 5px #666666);
}

.firstEdPhoto {
  margin: auto;
  width: 80%;
  height: auto;
  border: #25928d .1rem solid;
  filter: drop-shadow(5px 5px 5px #666666);
}

.earlySiteBox {
  text-align: center;
}

.row {
  margin-top: 15%;
}

a:active {
  text-decoration: none;
  color: #ffffff;
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 1.2rem;
} 

a:hover {
   color: #ffffff;
}



.proj-list {
  color: #ffffff;
  font-size: 1.2rem;
}

.projTitle {
  text-decoration: underline;
}

button {
  background: #27cec5;
  color: #ffffff;
  padding: 7px 14px;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
  text-decoration: none;
  vertical-align: middle;
  margin-bottom: 2%;
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 1.2rem;
}

.fa-github {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 1.2rem;
}



button:hover {
  background: #27cec5;
  color: #ffffff;
}

button:active {
  border-top-color:#25928d;
  background: #25928d;
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 1.2rem;
}

.quotesGif {
  border: #25928d .1rem solid;
}

@media (min-width: 30px) and (max-width: 474px) {
  .aboutPhoto {
    width: 70%;
    margin: auto;
    margin-top: 20%;
    margin-bottom: 1rem;
  }
}

@media (min-width: 475px) and (max-width: 768px) {
  .aboutPhoto {
    width: 60%;
    margin: auto;
    margin-top: 15%;
    margin-bottom: 1rem;
  }
}

